--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>The Washed Up Jogging Club</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="https://admo26.github.io/wujc/css/main.css">
 	</head>
 	<body>
 		<nav>
